# aws-tag

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/: main.py
src/core/app/: export_operation.py  import_operation.py  list_operation.py  tag_operation.py
src/core/aws/: api_gateway.py  base_aws_service.py  cloudwatch_logs.py  dynamodb.py  ec2.py  ecr.py  ecs.py  elastic_block_store.py  elasticache.py  elb.py  elbv2.py  kinesis_data_analytics.py  kinesis_data_firehose.py  kinesis_data_streams.py  kms.py  lambda_function.py  rds.py  s3.py  sns.py  sqs.py
src/factory/: service_factory.py
src/helper/: argument_helper.py  file_helper.py  filter_helper.py  input_helper.py  operation_helper.py  tag_helper.py
src/model/: arguments.py  filter.py  operation.py  resource.py  resource_tags.py  tag.py
